# ChangeLog for media-sound/quark
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/quark/ChangeLog,v 1.6 2004/07/19 09:54:29 eradicator Exp $

  19 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org> quark-3.21.ebuild:
  Added DOCS.  Added to ~amd64.

  19 Mar 2004; Jeremy Huddleston <eradicator@gentoo.org> quark-3.21.ebuild:
  fixed dep.  bump to stable x86

*quark-3.21 (09 Oct 2003)

  09 Oct 2003; Brandon Hale <tseng@gentoo.org> quark-3.21.ebuild:
  Initial commit.