@@ -1,5 +1,5 @@
-MD5 2994384584f3aec7df8d1a246e39d1aa setmixer-19941227_rc7.ebuild 1002
-MD5 1610e878f697736ba93603559197373f ChangeLog 703
+MD5 c163df142a0c4e4aa28fce87301d8c23 ChangeLog 830
 MD5 a1eaeb2ae801daeb712c90c060e922dc metadata.xml 158
+MD5 1d8537ca6fd8b6ce696ebfb66860232b setmixer-19941227_rc7.ebuild 1009
 MD5 557329c0c6a2f3d3baaa8a571dc47b4b files/digest-setmixer-19941227_rc7 140
-MD5 0f10e5b8fb6aa5eb3e0a16bdc549e685 files/setmixer.rc 525
+MD5 ce3d1fbbcfeae69e615276792f2ac615 files/setmixer.rc 565
