@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/scret
 # Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/scret/ChangeLog,v 1.4 2004/06/29 10:45:54 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/scret/ChangeLog,v 1.5 2004/07/20 06:12:59 eradicator Exp $
+
+  19 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org> scret-0.1.3.ebuild:
+  Added to ~amd64
 
   29 Jun 2004; Carsten Lohrke <carlo@gentoo.org> scret-0.1.3.ebuild:
   QA: inherit kde-base -> inherit kde
