@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/quark
 # Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/quark/ChangeLog,v 1.6 2004/07/19 09:54:29 eradicator Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/quark/ChangeLog,v 1.7 2004/07/20 06:09:29 eradicator Exp $
+
+  19 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org> quark-3.21.ebuild:
+  Added to ~amd64
 
   19 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org> quark-3.21.ebuild:
   Added DOCS.  Added to ~amd64.
